# brl-dolar-historical-series

./: README.md  arima_model.py  eda.py  lstm_baseline_model.py  pyproject.toml  requirements.txt
data/: Dolfut.csv
results/arima/: metrics.json
results/lstm/: metrics.json  training_metrics.json
