[project]
name = "brl-dolar-historical-series"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "seaborn",
    "matplotlib",
    "tensorflow",
    "keras",
    "statsmodels",
    "scikit-learn>=1.7.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]
exclude = ["data*", "results*", "eda_plots*"]
